# Computer_Vision

./: README.md
Action Recognition/ECO-caffe/: README.md
Action Recognition/TEA/: README.md  main.py  test_models.py  test_video.py
Action Recognition/TEA/ops/: dataset_config.py  tea50_8f.py
Action Recognition/TEA/scripts/: multi_test_tea_somtthingv1_rgb_8f.sh  single_test_tea_something_rgb_8f.sh  single_test_tea_somethingv1_rgb_8f.sh  (+2 more)
EasyOCR/: README.md
Face recognition/yolov5_arcFace/: README.md  detect_face.py  requirements.txt
Face recognition/yolov5_face/: README.md
Image_classification/android_demo/: README.md  settings.gradle
Image_classification/ncnn/: CMakeLists.txt  README.md  main.cpp
OCR/AttentionOCR/: 111.py  README.md
OCR/AttentionOCR_flask/: README.md  ceshi.py  flaskapp.py  requirements.txt  run.py  rundemo.py  text_detection.py  uwsgi.ini
OCR/EasyOCR/: dete.py
Target Detection/naodet/: README.md
Target Detection/naodet_ncnn/: CMakeLists.txt  README.md  main.cpp  nanodet.cpp  nanodet.h
Target Detection/yolov2ncnn/: README.md
Target Detection/yolov3_mobilenet/: README.md  download_dataset.py  example_demo.py  predict.py  read_image.py  requirements.txt  train_yolov3.py
Target Detection/yolov3_mobilnet_ncnn/: CMakeLists.txt  main.cpp  新建文本文档.txt
Target Detection/yolov5/: README.md
Target Detection/yolov5s_ncnn/: CMakeLists.txt  README.md  main.cpp
Target tracking/FairMOT/: README.md
Target tracking/Towards_Realtime_MOT/: README.md  demo.py  models.py  test_vedio.py  test_video.py  track.py
(+42 files in other folders)
